@@ -5,9 +5,8 @@ plugins {
     id 'org.beryx.jlink' version '2.24.1'
     id 'checkstyle'
 }
-
 group 'io.rpg'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 repositories {
     mavenCentral()
@@ -84,7 +83,9 @@ jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'app'
+        jvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.scene=io.rpg']
     }
+    forceMerge('log4j-api')
 }
 
 jlinkZip {
